add page ordering and add popup

--- a/src/templates/subcategory.html
+++ b/src/templates/subcategory.html
@@ -37,29 +37,29 @@ title: subcategory
 							<div class="filter">
 								<div class="filter__title"><a href="#">Объем</a></div>
 								<div class="filter__checkboxes">
-									<div class="checkbox">
-										<label>
+									<div class="filter__item">
+										<label class="checkbox">
 											<input type="radio" name="amount">
 											<span class="checkbox__text">Все объемы</span>
 											<span class="checkbox__icon"></span>
 										</label>
 									</div>
-									<div class="checkbox">
-										<label>
+									<div class="filter__item">
+										<label class="checkbox">
 											<input type="radio" name="amount">
 											<span class="checkbox__text">0.5 л</span>
 											<span class="checkbox__icon"></span>
 										</label>
 									</div>
-									<div class="checkbox">
-										<label>
+									<div class="filter__item">
+										<label class="checkbox">
 											<input type="radio" name="amount">
 											<span class="checkbox__text">0.75 л</span>
 											<span class="checkbox__icon"></span>
 										</label>
 									</div>
-									<div class="checkbox">
-										<label>
+									<div class="filter__item">
+										<label class="checkbox">
 											<input type="radio" name="amount">
 											<span class="checkbox__text">1 л</span>
 											<span class="checkbox__icon"></span>
@@ -76,29 +76,29 @@ title: subcategory
 							<div class="filter">
 								<div class="filter__title"><a href="#">вкус</a></div>
 								<div class="filter__checkboxes">
-									<div class="checkbox">
-										<label>
+									<div class="filter__item">
+										<label class="checkbox">
 											<input type="radio" name="amount1">
 											<span class="checkbox__text">Все вкусы</span>
 											<span class="checkbox__icon"></span>
 										</label>
 									</div>
-									<div class="checkbox">
-										<label>
+									<div class="filter__item">
+										<label class="checkbox">
 											<input type="radio" name="amount1">
 											<span class="checkbox__text">Вишня<span>12</span></span>
 											<span class="checkbox__icon"></span>
 										</label>
 									</div>
-									<div class="checkbox">
-										<label>
+									<div class="filter__item">
+										<label class="checkbox">
 											<input type="radio" name="amount1">
 											<span class="checkbox__text">Шоколад</span>
 											<span class="checkbox__icon"></span>
 										</label>
 									</div>
-									<div class="checkbox">
-										<label>
+									<div class="filter__item">
+										<label class="checkbox">
 											<input type="radio" name="amount1">
 											<span class="checkbox__text">Яблоко</span>
 											<span class="checkbox__icon"></span>
@@ -115,29 +115,29 @@ title: subcategory
 							<div class="filter">
 								<div class="filter__title"><a href="#">тип</a></div>
 								<div class="filter__checkboxes">
-									<div class="checkbox">
-										<label>
+									<div class="filter__item">
+										<label class="checkbox">
 											<input type="radio" name="amount2">
 											<span class="checkbox__text">Любой тип виски</span>
 											<span class="checkbox__icon"></span>
 										</label>
 									</div>
-									<div class="checkbox">
-										<label>
+									<div class="filter__item">
+										<label class="checkbox">
 											<input type="radio" name="amount2">
 											<span class="checkbox__text">Односолодовый</span>
 											<span class="checkbox__icon"></span>
 										</label>
 									</div>
-									<div class="checkbox">
-										<label>
+									<div class="filter__item">
+										<label class="checkbox">
 											<input type="radio" name="amount2">
 											<span class="checkbox__text">Купажированный</span>
 											<span class="checkbox__icon"></span>
 										</label>
 									</div>
-									<div class="checkbox">
-										<label>
+									<div class="filter__item">
+										<label class="checkbox">
 											<input type="radio" name="amount2">
 											<span class="checkbox__text">Бурбон</span>
 											<span class="checkbox__icon"></span>
