--- a/src/sass/_scaffolding.sass
+++ b/src/sass/_scaffolding.sass
@@ -12,6 +12,7 @@ p,a,span,input,h1,h2,h3,h4,h5,h6
 	letter-spacing: .025em
 a
 	text-decoration: none
+	color: $black-lighten
 p
 	color: $black-lighten
 button
@@ -48,7 +49,9 @@ h4
 	+clr
 .out
 	position: relative
-
+	max-width: 1920px
+	width: 100%
+	margin: 0 auto
 // slick
 .slick
 	&-dots
@@ -149,6 +152,8 @@ h4
 	height: 140px
 	padding: 10px 20px
 	resize: none
+	&-md
+		height: 170px
 .input,
 .textarea
 	font-size: $text-reg
@@ -159,11 +164,15 @@ h4
 	+placeholder($black-lighten)
 	max-width: 420px
 	width: 100%
-	border: 1px solid $black-lighten
+	border: 1px solid #818181
 	background-color: #f5f5f5
+	&:focus
+		border-color: $black-lighten
 .input
 	height: 50px
-	padding: 5px 20px
+	padding: 3px 20px 6px
+	&.error
+		border-color: $pink
 	&__address
 		position: relative
 		.input
@@ -232,51 +241,60 @@ h4
 			&:hover
 				color: $pink
 
-// overlay
-.overlay
-	position: absolute
+// popup
+.popup
+	background-color: rgba($black, .5)
+	position: fixed
 	left: 0
 	top: 0
 	right: 0
 	bottom: 0
-	width: 100%
-	height: 100%
-	z-index: 9995
-	background-color: rgba($black, .5)
-	cursor: pointer
+	z-index: 9999
+	+vertical
 	display: none
-
-// popup
-.popup
-	&-fixed
-		position: fixed
-		top: 0
-		right: 0
-		width: 360px
-		height: 100vh
+	&__inner
+		display: inline-block
+		vertical-align: middle
+		text-align: left
+		&_md
+			max-width: 640px
+	&__content
+		padding: 80px
 		background-color: $white
-		z-index: 9999
-		padding: 30px 0 40px
-		// display: none
-	&-center
-		position: fixed
-		top: 50%
-		left: 50%
-		transform: translate(-50%, -50%)
-		max-width: 1080px
-		width: 100%
-		background-color: $white
-		height: 420px
-		padding: 75px 80px 80px
-		z-index: 9996
 		box-shadow: 0 0 10px rgba(#0a0f17, .25)
-		display: none
+		position: relative
+		font-size: $text-sm
+		&_center
+			text-align: center
 		.btn-close
 			position: absolute
 			font-size: 0
 			right: 10px
 			top: 10px
 			padding: 10px
+		p
+			font-size: $text-reg
+			color: #818181
+			line-height: 1.5
+			margin-bottom: 70px
+	&__title
+		font-size: 32px
+		line-height: 1.125
+		font-weight: 700
+		margin-bottom: 62px
+.popup-aside
+	&:before
+		display: none
+	text-align: right
+	.popup__content
+		display: inline-block
+		text-align: left
+		width: 360px
+		height: 100%
+		background-color: $white
+		z-index: 9999
+		padding: 30px 0 40px
+			// display: none
 
 // breadcrumbs
 .breadcrumbs
@@ -335,29 +353,31 @@ h4
 
 // checkbox
 .checkbox
-	margin-bottom: 10px
-	font-size: 0
-	label
-		min-height: 20px
-		min-width: 20px
-		display: inline-block
-		cursor: pointer
-		font-weight: 400
-		position: relative
-		padding-left: 20px
-		&:hover
-			.checkbox__icon
-				border-color: $pink
-		input[type=radio]:checked ~ .checkbox__icon
+	min-height: 20px
+	min-width: 20px
+	display: inline-block
+	cursor: pointer
+	font-weight: 400
+	position: relative
+	&_black
+		.checkbox__icon
 			border-color: $black-lighten
-			&:before
-				opacity: 1
-				visibility: visible
+		.checkbox__text
+			color: $black-lighten
+	&:hover
+		.checkbox__icon
+			border-color: $pink
+	input[type=radio]:checked ~ .checkbox__icon,
+	input[type=checkbox]:checked ~ .checkbox__icon
+		border-color: $black-lighten
+		&:before
+			opacity: 1
+			visibility: visible
 	&__text
 		display: inline-block
-		vertical-align: middle
-		margin-left: 10px
-		padding-top: 2px
+		vertical-align: top
+		margin-left: 30px
+		padding-top: 3px
 		color: #818181
 		font-size: $text-sm
 		span
@@ -398,13 +418,25 @@ input[type="radio"]
 	border: none
 	+font-family($exo)
 	padding: 6px 15px
+	height: 30px
+	-webkit-appearance: none
 	outline: none
 	cursor: pointer
 	border-radius: 2px
+	&_lg
+		height: 50px
+		width: 100%
+		font-size: $text-reg
+		padding: 4px 20px 6px
+		border: 1px solid #818181
+
 
 // filter
 .filter
 	border-bottom: 1px solid $white
+	&__item
+		font-size: 0
+		margin-bottom: 10px
 	&__title
 		a
 			text-transform: uppercase
@@ -514,4 +546,38 @@ input[type="radio"]
 		display: none
 		&.active
 			display: block
+
+// form
+.form
+	position: relative
+	&__bottom
+		padding-top: 17px
+		&_right
+			text-align: right
+	&__link
+		text-decoration: underline
+		&:hover
+			text-decoration: none
+	.btn
+		margin-top: 5px
+.form-indent
+	.form__row
+		margin: 0 -80px
+		.form__col
+			padding: 0 80px
+.form-step
+	margin-bottom: 80px
+	.form__row
+		margin: 0 -40px
+		.form__col
+			padding: 0 40px
+.form-item
+	margin-bottom: 35px
+	font-size: 0
+	&__title
+		padding: 0
+		margin-bottom: 15px
+		font-size: $text-exmd
+		font-weight: 700
+		letter-spacing: .025em
 
