--- a/src/sass/part/_main.sass
+++ b/src/sass/part/_main.sass
@@ -753,28 +753,10 @@
 		font-size: $text-xs
 		color: #9ea2a8
 
-// comment
-.comment
-	position: relative
-	.title
-		padding: 0
-		margin-bottom: 15px
-		font-size: $text-exmd
-		font-weight: 700
-		letter-spacing: .025em
-	.row
-		margin: 0 -80px
-		.col
-			padding: 0 80px
-	.rate
-		margin-bottom: 35px
-	.btn
-		margin-top: 40px
 
-.cart-page
-	padding-bottom: 80px
 // cart
 .cart
+	margin-bottom: 80px
 	&__title
 		font-size: 24px
 		font-weight: 700
@@ -833,7 +815,7 @@
 		background-color: $white
 		font-size: $text-sm
 		letter-spacing: .025em
-		padding: 5px 15px 6px 5px
+		padding: 5px 15px 6px 12px
 		text-align: left
 	&__total,
 	&__label,
@@ -875,3 +857,62 @@
 	&__result,
 	&__footer
 		text-align: right
+	&__scroll
+		overflow: auto
+		height: 320px
+
+// steps
+.steps
+	font-size: 0
+	padding-bottom: 35px
+.step
+	display: inline-block
+	position: relative
+	margin-bottom: 15px
+	&.is-current
+		span
+			color: $black-lighten
+	&:not(:first-child)
+		padding-left: 40px
+		margin-left: 20px
+		&:before
+			content: ""
+			background-color: #818181
+			width: 20px
+			height: 1px
+			position: absolute
+			left: 0
+			top: 50%
+	span
+		font-weight: 700
+		font-size: 10px
+		color: #818181
+		letter-spacing: .2em
+		text-transform: uppercase
+
+// order
+.order
+	padding: 0 80px
+
+// confirmation
+.confirmation
+	font-size: 0
+	padding: 33px 0
+	&_sm
+		max-width: 302px
+	&__item
+		+clr
+		&:not(:last-child)
+			margin-bottom: 13px
+		.label
+			float: left
+			width: 38.1%
+		.value
+			padding-left: 5px
+			overflow: hidden
+			color: #818181
+			display: block
+		.value,
+		.label
+			line-height: 1.29
+			font-size: $text-sm
