add page delivery, contacts, about

--- a/src/sass/_scaffolding.sass
+++ b/src/sass/_scaffolding.sass
@@ -14,7 +14,15 @@ a
 	text-decoration: none
 	color: $black-lighten
 p
-	color: $black-lighten
+	font-size: $text-reg
+	color: #818181
+	line-height: 1.5
+	margin-bottom: 22px
+	span
+		color: $black-lighten
+	strong
+		font-weight: 700
+		color: $black-lighten
 button
 	border: none
 	outline: none
@@ -273,9 +281,6 @@ h4
 			top: 10px
 			padding: 10px
 		p
-			font-size: $text-reg
-			color: #818181
-			line-height: 1.5
 			margin-bottom: 70px
 	&__title
 		font-size: 32px
