--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,7 @@ title: TheBottle
 <!doctype html>
 <html lang="ru-Ru">
 {% include "partials/_head.html" %}
-<body>
+<body class="js-body">
 	<div class="out">
 		{% include "partials/_header.html" %}
 
@@ -441,6 +441,10 @@ title: TheBottle
 			</div>
 		</div>
 		<!-- popup END -->
+
+		<!-- btn-top BEGIN -->
+		<a href=".js-body" class="btn-top js-scroll-to"><i class="icon icon-arrow-top"></i></a>
+		<!-- btn-top END -->
 
 		{% include "partials/_footer.html" %}
 	</div>
