--- a/src/sass/helpers/_sprite.sass
+++ b/src/sass/helpers/_sprite.sass
@@ -8,28 +8,39 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites
+$s-icon-arrow-top-name: 's-icon-arrow-top'
+$s-icon-arrow-top-x: 0px
+$s-icon-arrow-top-y: 175px
+$s-icon-arrow-top-offset-x: 0px
+$s-icon-arrow-top-offset-y: -175px
+$s-icon-arrow-top-width: 6px
+$s-icon-arrow-top-height: 12px
+$s-icon-arrow-top-total-width: 249px
+$s-icon-arrow-top-total-height: 187px
+$s-icon-arrow-top-image: '../img/sprite.png'
+$s-icon-arrow-top: (0px, 175px, 0px, -175px, 6px, 12px, 249px, 187px, '../img/sprite.png', 's-icon-arrow-top', )
 $s-icon-basket-name: 's-icon-basket'
-$s-icon-basket-x: 72px
+$s-icon-basket-x: 51px
 $s-icon-basket-y: 150px
-$s-icon-basket-offset-x: -72px
+$s-icon-basket-offset-x: -51px
 $s-icon-basket-offset-y: -150px
 $s-icon-basket-width: 16px
 $s-icon-basket-height: 20px
 $s-icon-basket-total-width: 249px
 $s-icon-basket-total-height: 187px
 $s-icon-basket-image: '../img/sprite.png'
-$s-icon-basket: (72px, 150px, -72px, -150px, 16px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-basket', )
+$s-icon-basket: (51px, 150px, -51px, -150px, 16px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-basket', )
 $s-icon-close-basket-name: 's-icon-close-basket'
-$s-icon-close-basket-x: 156px
+$s-icon-close-basket-x: 135px
 $s-icon-close-basket-y: 150px
-$s-icon-close-basket-offset-x: -156px
+$s-icon-close-basket-offset-x: -135px
 $s-icon-close-basket-offset-y: -150px
 $s-icon-close-basket-width: 16px
 $s-icon-close-basket-height: 16px
 $s-icon-close-basket-total-width: 249px
 $s-icon-close-basket-total-height: 187px
 $s-icon-close-basket-image: '../img/sprite.png'
-$s-icon-close-basket: (156px, 150px, -156px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-close-basket', )
+$s-icon-close-basket: (135px, 150px, -135px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-close-basket', )
 $s-icon-close-gray-name: 's-icon-close-gray'
 $s-icon-close-gray-x: 217px
 $s-icon-close-gray-y: 150px
@@ -53,16 +64,16 @@ $s-icon-close-total-height: 187px
 $s-icon-close-image: '../img/sprite.png'
 $s-icon-close: (181px, 96px, -181px, -96px, 12px, 12px, 249px, 187px, '../img/sprite.png', 's-icon-close', )
 $s-icon-facebook-name: 's-icon-facebook'
-$s-icon-facebook-x: 93px
+$s-icon-facebook-x: 156px
 $s-icon-facebook-y: 150px
-$s-icon-facebook-offset-x: -93px
+$s-icon-facebook-offset-x: -156px
 $s-icon-facebook-offset-y: -150px
 $s-icon-facebook-width: 16px
 $s-icon-facebook-height: 16px
 $s-icon-facebook-total-width: 249px
 $s-icon-facebook-total-height: 187px
 $s-icon-facebook-image: '../img/sprite.png'
-$s-icon-facebook: (93px, 150px, -93px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-facebook', )
+$s-icon-facebook: (156px, 150px, -156px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-facebook', )
 $s-icon-hearth-name: 's-icon-hearth'
 $s-icon-hearth-x: 177px
 $s-icon-hearth-y: 150px
@@ -86,49 +97,49 @@ $s-icon-input-arrow-total-height: 187px
 $s-icon-input-arrow-image: '../img/sprite.png'
 $s-icon-input-arrow: (232px, 150px, -232px, -150px, 12px, 6px, 249px, 187px, '../img/sprite.png', 's-icon-input-arrow', )
 $s-icon-instagram-name: 's-icon-instagram'
-$s-icon-instagram-x: 135px
+$s-icon-instagram-x: 114px
 $s-icon-instagram-y: 150px
-$s-icon-instagram-offset-x: -135px
+$s-icon-instagram-offset-x: -114px
 $s-icon-instagram-offset-y: -150px
 $s-icon-instagram-width: 16px
 $s-icon-instagram-height: 16px
 $s-icon-instagram-total-width: 249px
 $s-icon-instagram-total-height: 187px
 $s-icon-instagram-image: '../img/sprite.png'
-$s-icon-instagram: (135px, 150px, -135px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-instagram', )
+$s-icon-instagram: (114px, 150px, -114px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-instagram', )
 $s-icon-liqueurs-active-name: 's-icon-liqueurs-active'
-$s-icon-liqueurs-active-x: 69px
+$s-icon-liqueurs-active-x: 0px
 $s-icon-liqueurs-active-y: 0px
-$s-icon-liqueurs-active-offset-x: -69px
+$s-icon-liqueurs-active-offset-x: 0px
 $s-icon-liqueurs-active-offset-y: 0px
 $s-icon-liqueurs-active-width: 64px
 $s-icon-liqueurs-active-height: 70px
 $s-icon-liqueurs-active-total-width: 249px
 $s-icon-liqueurs-active-total-height: 187px
 $s-icon-liqueurs-active-image: '../img/sprite.png'
-$s-icon-liqueurs-active: (69px, 0px, -69px, 0px, 64px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-liqueurs-active', )
+$s-icon-liqueurs-active: (0px, 0px, 0px, 0px, 64px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-liqueurs-active', )
 $s-icon-liqueurs-name: 's-icon-liqueurs'
-$s-icon-liqueurs-x: 0px
+$s-icon-liqueurs-x: 69px
 $s-icon-liqueurs-y: 0px
-$s-icon-liqueurs-offset-x: 0px
+$s-icon-liqueurs-offset-x: -69px
 $s-icon-liqueurs-offset-y: 0px
 $s-icon-liqueurs-width: 64px
 $s-icon-liqueurs-height: 70px
 $s-icon-liqueurs-total-width: 249px
 $s-icon-liqueurs-total-height: 187px
 $s-icon-liqueurs-image: '../img/sprite.png'
-$s-icon-liqueurs: (0px, 0px, 0px, 0px, 64px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-liqueurs', )
+$s-icon-liqueurs: (69px, 0px, -69px, 0px, 64px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-liqueurs', )
 $s-icon-login-name: 's-icon-login'
-$s-icon-login-x: 51px
+$s-icon-login-x: 72px
 $s-icon-login-y: 150px
-$s-icon-login-offset-x: -51px
+$s-icon-login-offset-x: -72px
 $s-icon-login-offset-y: -150px
 $s-icon-login-width: 16px
 $s-icon-login-height: 20px
 $s-icon-login-total-width: 249px
 $s-icon-login-total-height: 187px
 $s-icon-login-image: '../img/sprite.png'
-$s-icon-login: (51px, 150px, -51px, -150px, 16px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-login', )
+$s-icon-login: (72px, 150px, -72px, -150px, 16px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-login', )
 $s-icon-menu-name: 's-icon-menu'
 $s-icon-menu-x: 198px
 $s-icon-menu-y: 150px
@@ -152,16 +163,16 @@ $s-icon-mouse-total-height: 187px
 $s-icon-mouse-image: '../img/sprite.png'
 $s-icon-mouse: (181px, 75px, -181px, -75px, 10px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-mouse', )
 $s-icon-search-name: 's-icon-search'
-$s-icon-search-x: 114px
+$s-icon-search-x: 93px
 $s-icon-search-y: 150px
-$s-icon-search-offset-x: -114px
+$s-icon-search-offset-x: -93px
 $s-icon-search-offset-y: -150px
 $s-icon-search-width: 16px
 $s-icon-search-height: 16px
 $s-icon-search-total-width: 249px
 $s-icon-search-total-height: 187px
 $s-icon-search-image: '../img/sprite.png'
-$s-icon-search: (114px, 150px, -114px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-search', )
+$s-icon-search: (93px, 150px, -93px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-search', )
 $s-icon-star-big-name: 's-icon-star-big'
 $s-icon-star-big-x: 26px
 $s-icon-star-big-y: 150px
@@ -186,26 +197,26 @@ $s-icon-star-full-big-image: '../img/sprite.png'
 $s-icon-star-full-big: (0px, 150px, 0px, -150px, 21px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-star-full-big', )
 $s-icon-star-full-name: 's-icon-star-full'
 $s-icon-star-full-x: 181px
-$s-icon-star-full-y: 113px
+$s-icon-star-full-y: 128px
 $s-icon-star-full-offset-x: -181px
-$s-icon-star-full-offset-y: -113px
+$s-icon-star-full-offset-y: -128px
 $s-icon-star-full-width: 10px
 $s-icon-star-full-height: 10px
 $s-icon-star-full-total-width: 249px
 $s-icon-star-full-total-height: 187px
 $s-icon-star-full-image: '../img/sprite.png'
-$s-icon-star-full: (181px, 113px, -181px, -113px, 10px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-star-full', )
+$s-icon-star-full: (181px, 128px, -181px, -128px, 10px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-star-full', )
 $s-icon-star-name: 's-icon-star'
 $s-icon-star-x: 181px
-$s-icon-star-y: 128px
+$s-icon-star-y: 113px
 $s-icon-star-offset-x: -181px
-$s-icon-star-offset-y: -128px
+$s-icon-star-offset-y: -113px
 $s-icon-star-width: 10px
 $s-icon-star-height: 10px
 $s-icon-star-total-width: 249px
 $s-icon-star-total-height: 187px
 $s-icon-star-image: '../img/sprite.png'
-$s-icon-star: (181px, 128px, -181px, -128px, 10px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-star', )
+$s-icon-star: (181px, 113px, -181px, -113px, 10px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-star', )
 $s-icon-strong-alcohol-active-name: 's-icon-strong-alcohol-active'
 $s-icon-strong-alcohol-active-x: 0px
 $s-icon-strong-alcohol-active-y: 75px
@@ -229,16 +240,16 @@ $s-icon-strong-alcohol-total-height: 187px
 $s-icon-strong-alcohol-image: '../img/sprite.png'
 $s-icon-strong-alcohol: (138px, 0px, -138px, 0px, 56px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-strong-alcohol', )
 $s-icon-up-name: 's-icon-up'
-$s-icon-up-x: 0px
+$s-icon-up-x: 11px
 $s-icon-up-y: 175px
-$s-icon-up-offset-x: 0px
+$s-icon-up-offset-x: -11px
 $s-icon-up-offset-y: -175px
 $s-icon-up-width: 6px
 $s-icon-up-height: 12px
 $s-icon-up-total-width: 249px
 $s-icon-up-total-height: 187px
 $s-icon-up-image: '../img/sprite.png'
-$s-icon-up: (0px, 175px, 0px, -175px, 6px, 12px, 249px, 187px, '../img/sprite.png', 's-icon-up', )
+$s-icon-up: (11px, 175px, -11px, -175px, 6px, 12px, 249px, 187px, '../img/sprite.png', 's-icon-up', )
 $s-icon-vermouth-active-name: 's-icon-vermouth-active'
 $s-icon-vermouth-active-x: 121px
 $s-icon-vermouth-active-y: 75px
@@ -263,30 +274,30 @@ $s-icon-vermouth-image: '../img/sprite.png'
 $s-icon-vermouth: (61px, 75px, -61px, -75px, 55px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-vermouth', )
 $s-icon-wine-active-name: 's-icon-wine-active'
 $s-icon-wine-active-x: 199px
-$s-icon-wine-active-y: 0px
+$s-icon-wine-active-y: 75px
 $s-icon-wine-active-offset-x: -199px
-$s-icon-wine-active-offset-y: 0px
+$s-icon-wine-active-offset-y: -75px
 $s-icon-wine-active-width: 50px
 $s-icon-wine-active-height: 70px
 $s-icon-wine-active-total-width: 249px
 $s-icon-wine-active-total-height: 187px
 $s-icon-wine-active-image: '../img/sprite.png'
-$s-icon-wine-active: (199px, 0px, -199px, 0px, 50px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-wine-active', )
+$s-icon-wine-active: (199px, 75px, -199px, -75px, 50px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-wine-active', )
 $s-icon-wine-name: 's-icon-wine'
 $s-icon-wine-x: 199px
-$s-icon-wine-y: 75px
+$s-icon-wine-y: 0px
 $s-icon-wine-offset-x: -199px
-$s-icon-wine-offset-y: -75px
+$s-icon-wine-offset-y: 0px
 $s-icon-wine-width: 50px
 $s-icon-wine-height: 70px
 $s-icon-wine-total-width: 249px
 $s-icon-wine-total-height: 187px
 $s-icon-wine-image: '../img/sprite.png'
-$s-icon-wine: (199px, 75px, -199px, -75px, 50px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-wine', )
+$s-icon-wine: (199px, 0px, -199px, 0px, 50px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-wine', )
 $spritesheet-width: 249px
 $spritesheet-height: 187px
 $spritesheet-image: '../img/sprite.png'
-$spritesheet-sprites: ($s-icon-basket, $s-icon-close-basket, $s-icon-close-gray, $s-icon-close, $s-icon-facebook, $s-icon-hearth, $s-icon-input-arrow, $s-icon-instagram, $s-icon-liqueurs-active, $s-icon-liqueurs, $s-icon-login, $s-icon-menu, $s-icon-mouse, $s-icon-search, $s-icon-star-big, $s-icon-star-full-big, $s-icon-star-full, $s-icon-star, $s-icon-strong-alcohol-active, $s-icon-strong-alcohol, $s-icon-up, $s-icon-vermouth-active, $s-icon-vermouth, $s-icon-wine-active, $s-icon-wine, )
+$spritesheet-sprites: ($s-icon-arrow-top, $s-icon-basket, $s-icon-close-basket, $s-icon-close-gray, $s-icon-close, $s-icon-facebook, $s-icon-hearth, $s-icon-input-arrow, $s-icon-instagram, $s-icon-liqueurs-active, $s-icon-liqueurs, $s-icon-login, $s-icon-menu, $s-icon-mouse, $s-icon-search, $s-icon-star-big, $s-icon-star-full-big, $s-icon-star-full, $s-icon-star, $s-icon-strong-alcohol-active, $s-icon-strong-alcohol, $s-icon-up, $s-icon-vermouth-active, $s-icon-vermouth, $s-icon-wine-active, $s-icon-wine, )
 $spritesheet: (249px, 187px, '../img/sprite.png', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
