--- a/src/sass/part/_button.sass
+++ b/src/sass/part/_button.sass
@@ -130,3 +130,15 @@
 		span
 			font-size: $text-sm
 			color: $black-lighten
+	&-top
+		width: 32px
+		height: 32px
+		background-color: $white
+		border: 1px solid #f5f5f5
+		+vertical
+		position: fixed
+		right: 100px
+		bottom: 40px
+		z-index: 9991
+		.icon
+			vertical-align: middle
