--- a/src/sass/_scaffolding.sass
+++ b/src/sass/_scaffolding.sass
@@ -428,6 +428,8 @@ input[type="radio"]
 	outline: none
 	cursor: pointer
 	border-radius: 2px
+	&:focus
+		border-color: $black-lighten
 	&_lg
 		height: 50px
 		width: 100%
