--- a/src/sass/part/_header.sass
+++ b/src/sass/part/_header.sass
@@ -6,6 +6,9 @@
 		height: 80px
 		position: relative
 		+clr
+		+r(991)
+			padding: 20px 0
+			height: 72px
 	&__left
 		float: left
 	&__right
@@ -20,5 +23,3 @@
 		left: 50%
 		top: 50%
 		transform: translate(-50%, -50%)
-	&__menu
-		display: none
