--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -51,7 +51,7 @@ title: about
 						<p>Наши покупатели оставили <strong>3 715</strong> отзывов и поставили более <strong>12 839</strong> оценок различным напиткам.</p>
 					</div>
 					<div class="row">
-						<div class="col col-6">
+						<div class="col col-6 col-xs-12">
 							<div class="review">
 								<div class="review__name">Дмитрий Чупрун</div>
 								<ul class="rate">
@@ -65,7 +65,7 @@ title: about
 								<div class="review__data">25.05.2017</div>
 							</div>
 						</div>
-						<div class="col col-6">
+						<div class="col col-6 col-xs-12">
 							<div class="review">
 								<div class="review__name">Дмитрий Чупрун</div>
 								<ul class="rate">
@@ -81,7 +81,7 @@ title: about
 						</div>
 					</div>
 					<div class="row">
-						<div class="col col-6">
+						<div class="col col-6 col-xs-12">
 							<div class="review">
 								<div class="review__name">Дмитрий Чупрун</div>
 								<ul class="rate">
@@ -95,7 +95,7 @@ title: about
 								<div class="review__data">25.05.2017</div>
 							</div>
 						</div>
-						<div class="col col-6">
+						<div class="col col-6 col-xs-12">
 							<div class="review">
 								<div class="review__name">Дмитрий Чупрун</div>
 								<ul class="rate">
