--- a/src/templates/contacts.html
+++ b/src/templates/contacts.html
@@ -19,13 +19,13 @@ title: contacts
 					</ul>
 				</div>
 				<div class="row">
-					<div class="col col-6">
+					<div class="col col-6 col-xxs-12">
 						<div class="contacts-item">
 							<div class="contacts-item__title">Телефон</div>
 							<p><a href="tel:+380950059025">+380 (95) 005 90 25</a></p>
 						</div>
 					</div>
-					<div class="col col-6">
+					<div class="col col-6 col-xxs-12">
 						<div class="contacts-item">
 							<div class="contacts-item__title">Электронный адрес</div>
 							<p><a href="mailto:sales@thebottle.com.ua">sales@thebottle.com.ua</a></p>
@@ -33,14 +33,14 @@ title: contacts
 					</div>
 				</div>
 				<div class="row">
-					<div class="col col-6">
+					<div class="col col-6 col-xxs-12">
 						<div class="contacts-item">
 							<div class="contacts-item__title">Время работы</div>
 							<p>Пн-Пт: 09:00 - 19:00.</p>
 							<p>Сб-Вс: выходные</p>
 						</div>
 					</div>
-					<div class="col col-6">
+					<div class="col col-6 col-xxs-12">
 						<div class="contacts-item">
 							<div class="contacts-item__title">По вопросам сотрудничества</div>
 							<p><a href="mailto:partner@thebottle.com.ua">partner@thebottle.com.ua</a></p>
@@ -50,11 +50,11 @@ title: contacts
 				</div>
 				<div class="contacts__wrapper">
 					<div class="row">
-						<div class="col col-6">
+						<div class="col col-6 col-xxs-12">
 							<p>Мы будем очень рады получить письмо с вашими вопросами, пожеланиями, и предложениями</p>
 							<p>Если вам что-то не понравилось (цены, ассортимент) или вы не нашли нужного вина, то напишите нам - мы вам ответим и обязательно поможем.</p>
 						</div>
-						<div class="col col-6">
+						<div class="col col-6 col-xxs-12">
 							<p>По вашему запросу мы можем предоставить копии сертификатов на алкогольные напитки вместе с вашей заявкой.</p>
 							<p>Дополнительную информацию о работе нашего магазина вы можете получить в разделе <a href="#">Доставка и оплата.</a></p>
 						</div>
