--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -72,7 +72,7 @@ title: TheBottle
 		<div class="product" id="product">
 			<div class="inner">
 				<div class="row">
-					<div class="col col-6">
+					<div class="col col-6 col-sm-12">
 						<div class="banner" style="background-image: url('img/product-bg-00.png');">
 							<div class="banner__wrapper">
 								<h4>Johnnie Walker</h4>
@@ -81,7 +81,7 @@ title: TheBottle
 							</div>
 						</div>
 					</div>
-					<div class="col col-6">
+					<div class="col col-6 col-sm-12">
 						<div class="banner" style="background-image: url('img/product-bg-01.png');">
 							<div class="banner__wrapper">
 								<h4>Ram's Gate</h4>
@@ -102,7 +102,7 @@ title: TheBottle
 					<h3>Популярные товары<span>.</span></h3>
 				</div>
 				<div class="row">
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -127,7 +127,7 @@ title: TheBottle
 							</div>
 						</div>
 					</div>
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -152,7 +152,7 @@ title: TheBottle
 							</div>
 						</div>
 					</div>
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -178,7 +178,7 @@ title: TheBottle
 							</div>
 						</div>
 					</div>
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -204,7 +204,7 @@ title: TheBottle
 							</div>
 						</div>
 					</div>
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -229,7 +229,7 @@ title: TheBottle
 							</div>
 						</div>
 					</div>
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -254,7 +254,7 @@ title: TheBottle
 							</div>
 						</div>
 					</div>
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -280,7 +280,7 @@ title: TheBottle
 							</div>
 						</div>
 					</div>
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
