--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -3,14 +3,14 @@
 	<div class="inner">
 		<div class="footer__content">
 			<div class="row">
-				<div class="col col-20">
+				<div class="col footer__col">
 					<div class="sm-item">
 						<a href="#" class="logo footer__logo">
 							<img src="img/logo.png" alt="THEBOTTLE">
 						</a>
 					</div>
 				</div>
-				<div class="col col-20">
+				<div class="col footer__col">
 					<div class="sm-item">
 						<div class="sm-item__title">категории</div>
 						<ul class="sm-item__list">
@@ -21,7 +21,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col col-20">
+				<div class="col footer__col">
 					<div class="sm-item">
 						<div class="sm-item__title">информация</div>
 						<ul class="sm-item__list">
@@ -32,7 +32,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col col-22">
+				<div class="col footer__info">
 					<div class="sm-item">
 						<div class="sm-item__title">Акции и новости</div>
 						<div class="sm-item__input">
@@ -45,7 +45,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col col-18">
+				<div class="col footer__social">
 					<div class="sm-item sm-item_indent">
 						<div class="sm-item__title">мы в соц. сетях</div>
 						<div class="sm-item__social">
