--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -18,85 +18,83 @@
 			</div>
 		</div>
 	</div>
-	<div class="header__menu">
-		<div class="menu">
-			<div class="inner">
-				<div class="row">
-					<div class="col col-3">
-						<div class="simple-item">
-							<div class="simple-item__title">
-								<div class="simple-item__icon">
-									<i class="icon icon-alcohol"></i>
-								</div>
-								<span>крепкие напитки</span>
+	<div class="menu header__menu">
+		<div class="inner">
+			<div class="row">
+				<div class="col col-3 col-sm-6 col-xxs-12">
+					<div class="simple-item">
+						<a href="#" class="simple-item__title">
+							<div class="simple-item__icon">
+								<i class="icon icon-alcohol"></i>
 							</div>
-							<ul class="dropdown simple-item__dropdown">
-								<li><a href="#">виски</a></li>
-								<li><a href="#">бренди</a></li>
-								<li><a href="#">ром</a></li>
-								<li><a href="#">джин</a></li>
-								<li><a href="#">текила</a></li>
-								<li><a href="#">водка</a></li>
-								<li><a href="#">абсент</a></li>
-							</ul>
-						</div>
+							<span>крепкие напитки</span>
+						</a>
+						<ul class="dropdown simple-item__dropdown">
+							<li><a href="#">виски</a></li>
+							<li><a href="#">бренди</a></li>
+							<li><a href="#">ром</a></li>
+							<li><a href="#">джин</a></li>
+							<li><a href="#">текила</a></li>
+							<li><a href="#">водка</a></li>
+							<li><a href="#">абсент</a></li>
+						</ul>
 					</div>
-					<div class="col col-3">
-						<div class="simple-item">
-							<div class="simple-item__title">
-								<div class="simple-item__icon">
-									<i class="icon icon-liqueurs"></i>
-								</div>
-								<span>ликеры</span>
+				</div>
+				<div class="col col-3 col-sm-6 col-xxs-12">
+					<div class="simple-item">
+						<a href="#" class="simple-item__title">
+							<div class="simple-item__icon">
+								<i class="icon icon-liqueurs"></i>
 							</div>
-							<ul class="dropdown simple-item__dropdown">
-								<li><a href="#">виски</a></li>
-								<li><a href="#">бренди</a></li>
-								<li><a href="#">ром</a></li>
-								<li><a href="#">джин</a></li>
-								<li><a href="#">текила</a></li>
-								<li><a href="#">водка</a></li>
-								<li><a href="#">абсент</a></li>
-							</ul>
-						</div>
+							<span>ликеры</span>
+						</a>
+						<ul class="dropdown simple-item__dropdown">
+							<li><a href="#">виски</a></li>
+							<li><a href="#">бренди</a></li>
+							<li><a href="#">ром</a></li>
+							<li><a href="#">джин</a></li>
+							<li><a href="#">текила</a></li>
+							<li><a href="#">водка</a></li>
+							<li><a href="#">абсент</a></li>
+						</ul>
 					</div>
-					<div class="col col-3">
-						<div class="simple-item">
-							<div class="simple-item__title">
-								<div class="simple-item__icon">
-									<i class="icon icon-wine"></i>
-								</div>
-								<span>вина и игристые вина</span>
+				</div>
+				<div class="col col-3 col-sm-6 col-xxs-12">
+					<div class="simple-item">
+						<a href="#" class="simple-item__title">
+							<div class="simple-item__icon">
+								<i class="icon icon-wine"></i>
 							</div>
-							<ul class="dropdown simple-item__dropdown">
-								<li><a href="#">виски</a></li>
-								<li><a href="#">бренди</a></li>
-								<li><a href="#">ром</a></li>
-								<li><a href="#">джин</a></li>
-								<li><a href="#">текила</a></li>
-								<li><a href="#">водка</a></li>
-								<li><a href="#">абсент</a></li>
-							</ul>
-						</div>
+							<span>вина и игристые вина</span>
+						</a>
+						<ul class="dropdown simple-item__dropdown">
+							<li><a href="#">виски</a></li>
+							<li><a href="#">бренди</a></li>
+							<li><a href="#">ром</a></li>
+							<li><a href="#">джин</a></li>
+							<li><a href="#">текила</a></li>
+							<li><a href="#">водка</a></li>
+							<li><a href="#">абсент</a></li>
+						</ul>
 					</div>
-					<div class="col col-3">
-						<div class="simple-item">
-							<div class="simple-item__title">
-								<div class="simple-item__icon">
-									<i class="icon icon-vermouth"></i>
-								</div>
-								<span>вермуты</span>
+				</div>
+				<div class="col col-3 col-sm-6 col-xxs-12">
+					<div class="simple-item">
+						<a href="#" class="simple-item__title">
+							<div class="simple-item__icon">
+								<i class="icon icon-vermouth"></i>
 							</div>
-							<ul class="dropdown simple-item__dropdown">
-								<li><a href="#">виски</a></li>
-								<li><a href="#">бренди</a></li>
-								<li><a href="#">ром</a></li>
-								<li><a href="#">джин</a></li>
-								<li><a href="#">текила</a></li>
-								<li><a href="#">водка</a></li>
-								<li><a href="#">абсент</a></li>
-							</ul>
-						</div>
+							<span>вермуты</span>
+						</a>
+						<ul class="dropdown simple-item__dropdown">
+							<li><a href="#">виски</a></li>
+							<li><a href="#">бренди</a></li>
+							<li><a href="#">ром</a></li>
+							<li><a href="#">джин</a></li>
+							<li><a href="#">текила</a></li>
+							<li><a href="#">водка</a></li>
+							<li><a href="#">абсент</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
