--- a/src/sass/_scaffolding.sass
+++ b/src/sass/_scaffolding.sass
@@ -4,7 +4,6 @@ body
 	color: $black-lighten
 	+font-family($exo)
 	font-weight: 400
-	min-width: 1100px
 	&.popup-open
 		overflow: hidden
 		padding-right: 17px
@@ -38,6 +37,9 @@ h2
 	line-height: 1.2
 	font-weight: 700
 	margin-bottom: 37px
+	+r(991)
+		font-size: 36px
+		margin-bottom: 20px
 h3
 	font-size: 30px
 	color: $black-lighten
@@ -49,12 +51,20 @@ h3
 h4
 	font-size: 24px
 	line-height: 1.33
+	+r(500)
+		font-size: 18px
 .inner
-	max-width: 1100px
+	max-width: 1120px
 	width: 100%
-	padding: 0 10px
+	padding: 0 20px
 	margin: 0 auto
 	+clr
+	+r(1120)
+		width: 970px
+	+r(991)
+		width: 750px
+	+r(767)
+		width: 100%
 .out
 	position: relative
 	max-width: 1920px
@@ -96,18 +106,39 @@ h4
 		width: 75%
 	&-12
 		width: 100%
-	&-20
-		width: 20%
-	&-22
-		width: 22%
-	&-18
-		width: 18%
+	&-md
+		&-4
+			+r(1119)
+				width: 33.33%
+	&-sm
+		&-12
+			+r(991)
+				width: 100%
+		&-6
+			+r(991)
+				width: 50%
+		&-4
+			+r(991)
+				width: 33.33%
+	&-xs
+		&-6
+			+r(767)
+				width: 50%
+		&-12
+			+r(767)
+				width: 100%
+	&-xxs
+		&-12
+			+r(568)
+				width: 100%
 
 .text-center
 	text-align: center
 // title
 .title
 	padding: 76px 0
+	+r(991)
+		padding: 50px 0
 	&_center
 		text-align: center
 	&_inline
@@ -115,6 +146,8 @@ h4
 		h3
 			display: inline-block
 			margin-right: 20px
+			+r(1119)
+				margin-right: 0
 
 // animation-line
 .animation-line
@@ -176,6 +209,8 @@ h4
 	background-color: #f5f5f5
 	&:focus
 		border-color: $black-lighten
+	+r(767)
+		max-width: 100%
 .input
 	height: 50px
 	padding: 3px 20px 6px
@@ -183,10 +218,14 @@ h4
 		border-color: $pink
 	&__address
 		position: relative
+		max-width: 206px
+		display: inline-block
+		width: 100%
+		form
 		.input
 			border: none
 			border-bottom: 1px solid $black-lighten
-			padding: 8px 25px 7px 0
+			padding: 8px 15px 7px 0
 			font-size: $text-xs
 			background-color: transparent
 			height: auto
@@ -213,8 +252,9 @@ h4
 
 // menu
 .menu
-	padding: 20px 0
 	border-top: 1px solid #9ea2a8
+	+r(991)
+		padding: 25px 0
 
 // dropdown
 .dropdown
@@ -259,7 +299,7 @@ h4
 	bottom: 0
 	z-index: 9999
 	+vertical
-	display: none
+	// display: none
 	&__inner
 		display: inline-block
 		vertical-align: middle
@@ -272,6 +312,8 @@ h4
 		box-shadow: 0 0 10px rgba(#0a0f17, .25)
 		position: relative
 		font-size: $text-sm
+		+r(991)
+			padding: 60px 40px
 		&_center
 			text-align: center
 		.btn-close
@@ -282,15 +324,19 @@ h4
 			padding: 10px
 		p
 			margin-bottom: 70px
+			+r(767)
+				margin-bottom: 20px
 	&__title
 		font-size: 32px
 		line-height: 1.125
 		font-weight: 700
 		margin-bottom: 62px
+		+r(767)
+			margin-bottom: 20px
 .popup-aside
+	text-align: right
 	&:before
 		display: none
-	text-align: right
 	.popup__content
 		display: inline-block
 		text-align: left
@@ -299,12 +345,17 @@ h4
 		background-color: $white
 		z-index: 9999
 		padding: 30px 0 40px
-			// display: none
+		+r(1119)
+			padding-bottom: 20px
+		+r(360)
+			width: 100%
 
 // breadcrumbs
 .breadcrumbs
 	font-size: 0
 	margin: 0 -12px
+	+r(1119)
+		display: none
 	li
 		display: inline-block
 		padding: 0 2px
@@ -567,11 +618,21 @@ input[type="radio"]
 			text-decoration: none
 	.btn
 		margin-top: 5px
+		+r(767)
+			margin-top: 0
 .form-indent
 	.form__row
 		margin: 0 -80px
+		+r(991)
+			margin: 0 -40px
+		+r(480)
+			margin: 0 -20px
 		.form__col
 			padding: 0 80px
+			+r(991)
+				padding: 0 40px
+			+r(480)
+				padding: 0 20px
 .form-step
 	margin-bottom: 80px
 	.form__row
@@ -581,6 +642,8 @@ input[type="radio"]
 .form-item
 	margin-bottom: 35px
 	font-size: 0
+	+r(767)
+		margin-bottom: 20px
 	&__title
 		padding: 0
 		margin-bottom: 15px
