--- a/src/sass/part/_footer.sass
+++ b/src/sass/part/_footer.sass
@@ -2,13 +2,41 @@
 .footer
 	background-color: #f5f5f5
 	padding: 80px 0 40px
+	+r(568)
+		text-align: center
+		padding: 55px 0
 	&__bottom
 		padding-top: 40px
 		+clr
+		+r(568)
+			padding-top: 0
 	&__copyright
 		float: left
+		+r(568)
+			float: none
+			margin-bottom: 15px
 	&__created
 		float: right
+		+r(568)
+			float: none
 	&__logo
 		padding-top: 2px
 		display: inline-block
+	&__col
+		width: 20%
+		+r(991)
+			width: 33.33%
+		+r(568)
+			width: 100%
+	&__info
+		width: 22%
+		+r(991)
+			width: 50%
+		+r(568)
+			width: 100%
+	&__social
+		width: 18%
+		+r(991)
+			width: 50%
+		+r(568)
+			width: 100%
