--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -397,7 +397,7 @@ title: card
 					<!-- form BEGIN -->
 					<form action="/" class="form form-indent">
 						<div class="row form__row">
-							<div class="col col-6 form__col">
+							<div class="col col-6 col-xs-12 form__col">
 								<div class="form-item">
 									<div class="form-item__title">Ваша оценка</div>
 									<ul class="rate rate_big">
@@ -415,7 +415,7 @@ title: card
 									</div>
 								</div>
 							</div>
-							<div class="col col-6 form__col">
+							<div class="col col-6 col-xs-12 form__col">
 								<div class="form-item">
 									<div class="form-item__title">Текст комментария</div>
 									<textarea class="textarea"></textarea>
