--- a/src/templates/category.html
+++ b/src/templates/category.html
@@ -127,7 +127,7 @@ title: category
 					<h3>товары в этой категории<span>.</span></h3>
 				</div>
 				<div class="row">
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -152,7 +152,7 @@ title: category
 							</div>
 						</div>
 					</div>
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -177,7 +177,7 @@ title: category
 							</div>
 						</div>
 					</div>
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -203,7 +203,7 @@ title: category
 							</div>
 						</div>
 					</div>
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -229,7 +229,7 @@ title: category
 							</div>
 						</div>
 					</div>
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -254,7 +254,7 @@ title: category
 							</div>
 						</div>
 					</div>
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -279,7 +279,7 @@ title: category
 							</div>
 						</div>
 					</div>
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -305,7 +305,7 @@ title: category
 							</div>
 						</div>
 					</div>
-					<div class="col col-3">
+					<div class="col col-3 col-md-4 col-xs-6 col-xxs-12">
 						<div class="item">
 							<div class="item__wrapper">
 								<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
